cache/l2cache/src/main/java/com/example/l2cache/jwt/error/MyOtherCustomException.java
package com.example.l2cache.jwt.error;

public class MyOtherCustomException extends RuntimeException{
    public MyOtherCustomException(String message) {
    }
}
